# caff

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  feature ci.yml  feature ci.yml.old
cmake/: caffConfig.cmake.in  easyConfig.cmake.in
include/: CMakeLists.txt
include/caff/: bit.h  cmath.h  concepts.h  diagnostic_info.h  exception.h  flags.h  format.h  functional.h  source_location.h  stdexcept.h  tuple.h  type_list.h  type_traits.h  utility.h  variable.h  variant.h
include/caff/test/: compare.h  dummy.h  type_list.h
include/easy/: bit.h  concepts.h  flags.h  functional.h  math.h  source_location.h  tuple.h  type_list.h  type_traits.h  utility.h  variant.h
include/easy/test/: compare.h  dummy.h  type_list.h
tests/: CMakeLists.txt  bit_tests.cpp  cmath_tests.cpp  concepts_tests.cpp  diagnostic_info_tests.cpp  exception_tests.cpp  flags_tests.cpp  format_tests.cpp  functional_tests.cpp  math_tests.cpp  source_location_tests.cpp  stdexcept_tests.cpp  tuple_tests.cpp  type_list_tests.cpp  type_traits_tests.cpp  utility_tests.cpp  variable_tests.cpp  variant_tests.cpp
tests/fixtures/: flags_fixture.h
tests/test/: test_type_list_tests.cpp
